aligning issues

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ button.blue:hover {
 	grid-column: 2;
 	grid-row: 1 /span 2;
 	position: relative;
-	top: -1rem;
+	top: 1rem;
 	z-index: 1;
 }
 .largeSelf img {
@@ -419,7 +419,7 @@ button.blue:hover {
 		z-index: 1;
 	}
 	.largeSelf img {
-		position: relative; left: -15rem;
+		position: relative; left: -20rem;
 		width: 15vw;
 	}
 
